# mmorpg-prototype-chunk-server

./: .env.example  AGGRO_SYSTEM_GUIDE.md  ATTACK_SYSTEM_GUIDE.md  CLIENT_ATTACK_PACKETS.md  CLIENT_ITEM_PICKUP_PACKET.md  CMakeLists.txt  COMBAT_SKILL_PACKETS.md  CORPSE_LOOT_INSPECT_PACKET.md  CORPSE_LOOT_PICKUP_PACKET.md  DIALOGUE_QUEST_SYSTEM_GUIDE.md  DIALOGUE_QUEST_SYSTEM_TZ.md  Dockerfile  Dockerfile.dev  HARVEST_CLIENT_PACKETS.md  HARVEST_INSPECT_LOOT_IMPLEMENTATION.md  HARVEST_SERVER_RESPONSES.md  HARVEST_SYSTEM_DOCUMENTATION.md  HARVEST_SYSTEM_DOCUMENTATION_NEW.md  HARVEST_SYSTEM_GUIDE.md  INVENTORY_LOOT_SYSTEM_GUIDE.md  LAG_COMPENSATION_IMPLEMENTATION.md  MOB_ARCHITECTURE.md  MOB_MOVEMENT_SYSTEM.md  README.md  REQUEST_ID_INTEGRATION.md  TODO.md  changelog.md  config.json  copy_includes.sh  docker-compose.dev.yml  docker-compose.yml  test_request_id.py  watch_and_run.sh
docs/: ambient-speech-quest-dialogue-plan.md  analytics-system-plan.md  client-combat-protocol.md  client-death-respawn-protocol.md  client-emote-protocol.md  client-item-features-protocol.md  client-progression-protocol.md  client-server-protocol.md  client-world-systems-protocol.md  death-respawn-plan.md  equipment-system-plan.md  mob-ai-movement-protocol.md  npc-ambient-speech-protocol.md  npc-dialogue-quest-trade.md  passive-skills.md  skill-learning-system.md  stats-system-design.md  stats-update-protocol.md  trading-durability-plan.md  wio-client-integration.md  world-interactive-objects-plan.md  world-systems-design.md
docs/api/: 00-protocol-overview.md  01-connection-auth-protocol.md  02-combat-skills-protocol.md  03-mobs-ai-protocol.md  04-inventory-items-equipment-protocol.md  05-npc-dialogue-quests-protocol.md  06-vendor-trade-repair-protocol.md  07-loot-harvest-protocol.md  08-progression-stats-protocol.md  09-death-respawn-protocol.md  10-bestiary-protocol.md  11-chat-notifications-protocol.md
docs/migrations/: 041_add_chase_speed.sql  042_npc_type_quest_binding.sql  043_skill_system_schema.sql  044_warrior_skills.sql  045_mage_skills.sql  046_skill_books.sql  047_trainer_npcs_and_dialogues.sql  048_trainer_class_mapping.sql  049_title_system.sql  050_fix_integrity_indexes_comments.sql  051_character_skill_bar.sql  052_item_use_effects_data.sql  053_emote_system.sql  054_npc_ambient_speech.sql  055_quest_rewards_hidden.sql  056_ruins_dying_stranger.sql  057_ruins_class_based_gift.sql  061_rewrite_ruins_dying_stranger.sql  062_rewrite_npc_dialogues_and_varan_quest.sql  063_fix_vendor_shops.sql
include/chunk_server/: Authenticator.hpp  CharacterManager.hpp  ChunkServer.hpp  ClientData.hpp  Event.hpp  EventHandler.hpp  EventQueue.hpp  GameServerWorker.hpp
include/data/: AttackSystem.hpp  AttackSystemExample.hpp  ClientData.hpp  CombatStructs.hpp  DataStructs.hpp  SkillStructs.hpp  SpecialStructs.hpp
include/events/: Event.hpp  EventData.hpp  EventDispatcher.hpp  EventHandler.hpp  EventQueue.hpp  ExperienceEventHandler.hpp
include/events/handlers/: BaseEventHandler.hpp  CharacterEventHandler.hpp  ChatEventHandler.hpp  ChunkEventHandler.hpp  ClientEventHandler.hpp  CombatEventHandler.hpp  DialogueEventHandler.hpp  EmoteEventHandler.hpp  EquipmentEventHandler.hpp  HarvestEventHandler.hpp  ItemEventHandler.hpp  MobEventHandler.hpp  NPCEventHandler.hpp  SkillEventHandler.hpp  VendorEventHandler.hpp  (+2 more)
include/handlers/: MessageHandler.hpp
include/helpers/: Config.hpp  Logger.hpp
include/network/: ClientSession.hpp  GameServerWorker.hpp  NetworkManager.hpp
include/services/: AmbientSpeechManager.hpp  BestiaryManager.hpp  ChampionManager.hpp  CharacterManager.hpp  CharacterStatsNotificationService.hpp  ChunkManager.hpp  ClientManager.hpp  CombatCalculator.hpp  CombatResponseBuilder.hpp  CombatSystem.hpp  DialogueActionExecutor.hpp  DialogueConditionEvaluator.hpp  DialogueManager.hpp  DialogueSessionManager.hpp  EmoteManager.hpp  EquipmentManager.hpp  ExperienceCacheManager.hpp  ExperienceManager.hpp  GameConfigService.hpp  GameServices.hpp  GameZoneManager.hpp  HarvestManager.hpp  InventoryManager.hpp  ItemManager.hpp  LootManager.hpp  MasteryManager.hpp  MobAIController.hpp  MobInstanceManager.hpp  MobManager.hpp  MobMovementManager.hpp  NPCManager.hpp  PityManager.hpp  QuestManager.hpp  RegenManager.hpp  ReputationManager.hpp  RespawnZoneManager.hpp  SkillManager.hpp  SkillSystem.hpp  SpawnZoneManager.hpp  StatusEffectTemplateManager.hpp  (+6 more)
include/utils/: Config.hpp  Generators.hpp  JSONParser.hpp  Logger.hpp  ResponseBuilder.hpp  TerminalColors.hpp  ThreadPool.hpp  TimestampUtils.hpp
src/: config.json  debug_logs.txt  main.cpp
src/chunk_server/: Authenticator.cpp  CharacterManager.cpp  ChunkServer.cpp  ClientData.cpp  Event.cpp  EventHandler.cpp  EventQueue.cpp  GameServerWorker.cpp
src/data/: AttackSystem.cpp  ClientData.cpp
src/events/: Event.cpp  EventDispatcher.cpp  EventHandler.cpp  EventQueue.cpp  ExperienceEventHandler.cpp
src/handlers/: MessageHandler.cpp
src/helpers/: Config.cpp
src/network/: ClientSession.cpp  GameServerWorker.cpp  NetworkManager.cpp
src/services/: AmbientSpeechManager.cpp  BestiaryManager.cpp  ChampionManager.cpp  CharacterManager.cpp  CharacterStatsNotificationService.cpp  ChunkManager.cpp  ClientManager.cpp  CombatCalculator.cpp  CombatResponseBuilder.cpp  CombatSystem.cpp  DialogueActionExecutor.cpp  DialogueConditionEvaluator.cpp  DialogueManager.cpp  DialogueSessionManager.cpp  EmoteManager.cpp  EquipmentManager.cpp  ExperienceCacheManager.cpp  ExperienceManager.cpp  GameConfigService.cpp  GameZoneManager.cpp  HarvestManager.cpp  InventoryManager.cpp  ItemManager.cpp  LootManager.cpp  MasteryManager.cpp  MobAIController.cpp  MobInstanceManager.cpp  MobManager.cpp  MobMovementManager.cpp  NPCManager.cpp  PityManager.cpp  QuestManager.cpp  RegenManager.cpp  ReputationManager.cpp  RespawnZoneManager.cpp  SkillManager.cpp  SkillSystem.cpp  SpawnZoneManager.cpp  StatusEffectTemplateManager.cpp  TitleManager.cpp  (+5 more)
src/utils/: Config.cpp  Generators.cpp  JSONParser.cpp  Logger.cpp  Scheduler.cpp  ThreadPool.cpp  TimeUtils.cpp  TimestampUtils.cpp
(+17 files in other folders)
